<resources>
    <string name="app_name">FlickCount</string>
    <string name="title_activity_main">FlickCount</string>
    <string name="id">id</string>
    <string name="cause">cause</string>
    <string name="id_number">ID number:</string>
    <string name="action_settings">settings</string>
    <string name="example_date">03.02.2013 13:13</string>
    <string name="example_id">123</string>
    <string name="example_cause">Stupid cause.</string>
    <string name="archive">Archive</string>>
    <string name="enter_start_date">Enter start date</string>
    <string name="enter_end_date">Enter end date</string>
    <string name="number_of_flick">Number of flick</string>
    <string name="save_flick">Save flick?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="select">select</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="select_start_date_here">Select start date here</string>
    <string name="select_end_date_here">Select end date here</string>
    <string name="start_date_can_not_be_after_end_date">Start date can`t be after end date!</string>
    <string name="end_date_can_not_be_before_satrt_date">End date can`t be before start date!</string>
</resources>
