<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextSubHeadersInApp"
        android:paddingTop="4dp"
        android:text="@string/start_date"/>


    <DatePicker
        android:id="@+id/datePickerStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:spinnersShown="true" />

    <TextView
        android:id="@+id/textEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextSubHeadersInApp"
        android:text="@string/end_date"/>

    <DatePicker
        android:id="@+id/datePickerEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:spinnersShown="true" />

    <Button
        android:id="@+id/buttonSetDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onButtonSetDateClick"
        android:text="@string/select" />
</LinearLayout>