<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/subHeadersPadding"
        android:paddingRight="@dimen/rightPadding"
        android:paddingEnd="@dimen/rightPadding"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextSubHeadersInApp"
            android:paddingTop="4dp"
            android:layout_weight="1"
            android:text="@string/start_date"/>

        <TextView
            android:id="@+id/lblStartDate"
            style="@style/TextSubHeadersInApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@android:color/white"
            android:clickable="true"
            android:hint="@string/select_start_date_here"
            android:onClick="onLblStartDateClick" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/subHeadersPadding"
        android:paddingRight="@dimen/rightPadding"
        android:paddingEnd="@dimen/rightPadding"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/TextSubHeadersInApp"
            android:paddingTop="4dp"
            android:text="@string/end_date"/>

        <TextView
            android:id="@+id/lblEndDate"
            android:layout_weight="2"
            android:clickable="true"
            android:onClick="onLblEndDateClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextSubHeadersInApp"
            android:background="@android:color/white"
            android:hint="@string/select_end_date_here"/>


    </LinearLayout>




    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewAllFlicks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp" />
</LinearLayout>